# lightbot

./: .cursorrules  .gitignore  KRAB_POHYB.md  OPTIMALIZACE_ARCADE.md  PRIRUCKA.md  README.md  REFAKTORING.md  create_rotating_gif.py  game_config.yaml  infrastruktura.py  main.py  player.py  popis.txt  pyproject.toml  test_krab_rotation.py  todo.txt  torpedo_matematika.md
enemies/: __init__.py  base_enemy.py  crab.py  prudic.py  star.py  torpedo.py  ufo.py
